<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- General -->
    <string name="app_name">zK Updater</string>
    <string name="agree">Agree</string>
    <string name="disagree">Disagree</string>

    <!-- Error -->
    <string name="unknown_val">Unknown</string>
    <string name="no_connection">No connection</string>
    <string name="app_not_available">App not available</string>
    <string name="not_supported_title">Device not supported</string>
    <string name="not_supported_desc">This device is not officially supported by zwliew_Kernel.</string>
    <string name="no_requirements_title">No root or busybox</string>
    <string name="no_requirements_desc">This device does not have the appropriate functionality. Please install them before using this app.</string>
    <string name="invalid_character">Space is an invalid character!</string>
    <string name="no_backup_file">No backups found</string>

    <!-- Updater Fragment -->
    <!-- Newest version -->
    <string name="updater_new_title">Latest kernel</string>
    <string name="updater_new_info">This is the latest available release of zwliew_Kernel for your device.</string>

    <!-- Changelog -->
    <string name="updater_changelog">Changelog</string>
    <string name="updater_log_title">Changelog</string>
    <!-- Notification -->
    <string name="avail_release">New release available!</string>

    <!-- Share -->
    <string name="share_title">zwliew_Kernel is great!</string>
    <string name="share_desc">Check out zwliew_Kernel, a kernel meant to improve your experience without any tinkering!\n\nG+: https://plus.google.com/+ZhaoWeiLiew\nXDA: http://forum.xda-developers.com/member.php?u=5604178</string>
    <string name="share_chooser_title">Share via</string>

    <!-- Donate -->
    <string-array name="donate_items">
        <item>Lollipop - $SGD1</item>
        <item>Cup of coffee - SGD$3</item>
        <item>McDonald\'s lunch - SGD$5</item>
        <item>Bus fare - SGD$8</item>
        <item>Electricity bill - SGD$10</item>
    </string-array>

    <!-- Backup Fragment -->
    <string name='backup_title'>Backup &amp; Restore</string>
    <string name="backup_dialog_title">Back up current kernel</string>
    <string name="backup_dialog_hint">Backup name</string>

    <string name="restore_title">Reboot after restore?</string>
    <string name="restore_desc">Automatically reboot your device after restoring the selected kernel.</string>

    <string name="rename_title">Rename to?</string>

    <string-array name="kernel_backup_items">
        <item>Restore</item>
        <item>Rename</item>
        <item>Remove</item>
    </string-array>

    <!-- Settings Fragment -->
    <string name="settings_title">Settings</string>
    <string name="settings_layout_title">SETTINGS</string>
    <string name="settings_subtitle">Updater configuration</string>

    <!-- About -->
    <string name="about_author">ABOUT</string>
    <string name="about_author_name">zwliew</string>
    <string name="about_author_summary">G+: https://plus.google.com/+ZhaoWeiLiew\nXDA: http://forum.xda-developers.com/member.php?u=5604178</string>

    <!-- Settings -->
    <string name="auto_check_desc">Automatically check for newer kernels\neven when you\'re not in the app.</string>
    <string name="auto_check_title">Auto-check for updates</string>

    <string name="auto_flash_title">Auto-flash kernels</string>
    <string name="auto_flash_desc">Automatically reboot to recovery\nand flash downloaded kernels.</string>
    <string name="backup_flash_title">Backup before flash</string>
    <string name="backup_flash_desc">Backup your current kernel configuration\nbefore auto-flashing a new one.</string>

    <!-- Support -->
    <string name="support_layout_title">SUPPORT</string>

    <string name="support_email_title">Contact</string>
    <string name="support_email_desc">Email me if you have any queries\nor issues.</string>
    <string name="email_chooser_title">Send email via</string>

    <string name="support_me_title">Support my work</string>
    <string name="support_me_desc">Support my work by sharing the kernel\nor even donating.</string>

    <string-array name="support_me_items">
        <item>Share the kernel</item>
        <item>Donate</item>
    </string-array>

    <string name="support_chooser_title">Support via</string>
    <string name="updater_support_donate">Donate</string>

    <!-- Processor Fragment -->
    <string name="processor_title">Processor</string>
    <string name="processor_subtitle">Tune your CPU and GPU</string>
</resources>
