<?xml version="1.0" encoding="utf-8"?>

<android.support.v4.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/updater_swipe_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <RelativeLayout
            android:id="@+id/updater_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingEnd="8dp"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:paddingStart="8dp">

            <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:id="@+id/updater_new_card_view"
                android:layout_width="match_parent"
                android:layout_height="90dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:layout_marginTop="6dp"
                card_view:cardCornerRadius="4dp">

                <TextView
                    android:id="@+id/updater_new_title"
                    style="@style/TextAppearance.AppCompat.Body1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignLeft="@id/updater_new_card_view"
                    android:layout_alignStart="@id/updater_new_card_view"
                    android:layout_alignTop="@id/updater_new_card_view"
                    android:layout_gravity="start"
                    android:layout_marginLeft="@dimen/text_view_margin"
                    android:layout_marginStart="@dimen/text_view_margin"
                    android:layout_marginTop="25dp"
                    android:text="@string/updater_new_title" />

                <TextView
                    android:id="@+id/updater_new_desc"
                    style="@style/TextAppearance.AppCompat.Caption"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignTop="@id/updater_new_title"
                    android:layout_gravity="start"
                    android:layout_marginLeft="@dimen/text_view_margin"
                    android:layout_marginStart="@dimen/text_view_margin"
                    android:layout_marginTop="43dp"
                    android:text="@string/unknown_val" />
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:id="@+id/updater_log_card_view"
                android:layout_width="match_parent"
                android:layout_height="90dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_below="@id/updater_new_card_view"
                android:layout_marginTop="6dp"
                card_view:cardCornerRadius="4dp">

                <ImageView
                    android:id="@+id/updater_log"
                    style="?android:attr/borderlessButtonStyle"
                    android:layout_width="@dimen/image_size"
                    android:layout_height="@dimen/image_size"
                    android:layout_gravity="start|center_vertical"
                    android:contentDescription="@string/updater_changelog"
                    android:src="@drawable/ic_history" />

                <TextView
                    android:id="@+id/updater_log_title"
                    style="@style/TextAppearance.AppCompat.Body1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignLeft="@id/updater_log_card_view"
                    android:layout_alignStart="@id/updater_log_card_view"
                    android:layout_alignTop="@id/updater_log_card_view"
                    android:layout_gravity="start|center_vertical"
                    android:layout_marginLeft="@dimen/text_view_margin"
                    android:layout_marginStart="@dimen/text_view_margin"
                    android:text="@string/updater_log_title" />
            </android.support.v7.widget.CardView>

            <com.melnykov.fab.FloatingActionButton xmlns:fab="http://schemas.android.com/apk/res-auto"
                android:id="@+id/download_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_gravity="bottom|end"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:src="@android:drawable/stat_sys_download_done"
                fab:fab_colorNormal="@color/accent"
                fab:fab_colorPressed="@color/accent_light"
                fab:fab_colorRipple="@color/ripple" />
        </RelativeLayout>
    </ScrollView>
</android.support.v4.widget.SwipeRefreshLayout>